--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 <h2 class="text-4xl md:text-6xl font-extrabold leading-tight mb-4 text-gray-900 tracking-tight">
                     Expert Mobile Detailing For Your Vehicle
                 </h2>
-                <p class="text-lg md:text-xl text-gray-800 mb-8">
+                <p class="text-lg md:text-xl text-gray-800 mb-8 font-semibold">
                     Select your vehicle type below to see our customized detailing packages. We bring the showroom shine to your doorstep.
                 </p>
                 <a href="tel:+14052955189" class="btn btn-secondary text-lg">Get a Free Quote</a>
