--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             position: absolute;
             top: 50%;
             left: 50%;
-            min-width: 100%;
-            min-height: 100%;
-            width: auto;
-            height: auto;
+            width: 100%;
+            height: 100%;
+            /* Scale the iframe to zoom in and crop the black bars */
+            transform: translate(-50%, -50%) scale(3.2);
             z-index: -100;
-            transform: translateX(-50%) translateY(-50%);
+            pointer-events: none; /* Prevents interaction with the background video */
         }
         .hero-overlay {
             position: absolute;
@@ -173,6 +173,42 @@
         }
         .pricing-card .btn {
             margin-top: 2rem;
+        }
+
+        /* --- New "Sexy" Button Styles --- */
+        .btn-call-to-action {
+            background-image: linear-gradient(to right, #28a745 0%, #218838 51%, #28a745 100%);
+            color: white;
+            padding: 0.8rem 1.6rem;
+            border-radius: 50px; /* Pill shape */
+            font-size: 1.1rem;
+            font-weight: 700;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            text-decoration: none;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease-in-out;
+            background-size: 200% auto;
+            animation: pulse-shadow 2s infinite;
+        }
+
+        .btn-call-to-action:hover {
+            background-position: right center; /* change the direction of the change here */
+            transform: translateY(-3px);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+        }
+
+        @keyframes pulse-shadow {
+            0% {
+                box-shadow: 0 4px 15px rgba(40, 167, 69, 0.4);
+            }
+            50% {
+                box-shadow: 0 4px 25px rgba(40, 167, 69, 0.7);
+            }
+            100% {
+                box-shadow: 0 4px 15px rgba(40, 167, 69, 0.4);
+            }
         }
     </style>
 </head>
@@ -340,14 +376,13 @@
     </main>
 
     <footer class="bg-white py-3 px-6 md:px-12 flex justify-between items-center shadow-lg fixed bottom-0 w-full z-50 border-t border-gray-200">
-        <h1 class="text-xl md:text-2xl font-extrabold text-gray-800 tracking-wide">
-            Michie Auto Detailing
-        </h1>
-        <div class="text-right">
-            <span class="text-sm font-semibold text-blue-600 block">AVAILABLE 24/7</span>
-            <a href="tel:+14052955189" class="btn btn-secondary mt-1">
-                <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20"><path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path></svg>
-                (405) 295-5189
+        <p class="text-lg md:text-xl font-bold text-gray-800 hidden sm:block">
+            Book Your Appointment Today!
+        </p>
+        <div class="w-full sm:w-auto flex justify-center sm:justify-end">
+            <a href="tel:+14052955189" class="btn-call-to-action">
+                <svg class="w-6 h-6 mr-3" fill="currentColor" viewBox="0 0 20 20"><path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path></svg>
+                Call Now: (405) 295-5189
             </a>
         </div>
     </footer>
