--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
       });
     </script>
 
+    <!-- Function to handle Google Ads call conversion tracking on button clicks -->
+    <script>
+      function gtag_report_conversion(url) {
+        var callback = function () {
+          if (typeof(url) != 'undefined') {
+            window.location = url;
+          }
+        };
+        gtag('event', 'conversion', {
+            'send_to': 'AW-10782185640/PPImCJ-a7eIaEKixrJUo',
+            'event_callback': callback
+        });
+        return false;
+      }
+    </script>
+
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -230,7 +246,8 @@
                 <p class="text-lg md:text-xl text-gray-800 mb-8 font-semibold">
                     Select your vehicle type below to see our customized detailing packages. We bring the showroom shine to your doorstep.
                 </p>
-                <a href="tel:+14052955189" class="btn btn-secondary text-lg">Get a Free Quote</a>
+                <!-- FIXED: Added onclick for call tracking -->
+                <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary text-lg">Get a Free Quote</a>
                 <p class="text-sm text-blue-600 mt-3 font-semibold">Call Anytime - We're Open 24/7!</p>
             </div>
         </section>
@@ -260,7 +277,8 @@
                             <li>Surface protectent for the dash and display/controls</li>
                             <li>Steering wheel and dash clean</li>
                         </ul>
-                        <a href="tel:+14052955189" class="btn btn-secondary">Book Level 1</a>
+                        <!-- FIXED: Added onclick for call tracking -->
+                        <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 1</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 2 Detail</h4>
@@ -275,7 +293,8 @@
                             <li>Pet hair removal</li>
                             <li>Odor removal</li>
                         </ul>
-                         <a href="tel:+14052955189" class="btn btn-secondary">Book Level 2</a>
+                         <!-- FIXED: Added onclick for call tracking -->
+                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 2</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 3 Detail</h4>
@@ -292,7 +311,8 @@
                             <li>Free micrfiber cloth</li>
                             <li>Protection plan (complimentary maintenance clean within 15 days)</li>
                         </ul>
-                         <a href="tel:+14052955189" class="btn btn-secondary">Book Level 3</a>
+                         <!-- FIXED: Added onclick for call tracking -->
+                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 3</a>
                     </div>
                 </div>
 
@@ -311,7 +331,8 @@
                             <li>Surface protectent for the dash and display/controls</li>
                             <li>Steering wheel and dash clean</li>
                         </ul>
-                         <a href="tel:+14052955189" class="btn btn-secondary">Book Level 1</a>
+                         <!-- FIXED: Added onclick for call tracking -->
+                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 1</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 2 Detail</h4>
@@ -326,7 +347,8 @@
                             <li>Pet hair removal</li>
                             <li>Odor removal</li>
                         </ul>
-                        <a href="tel:+14052955189" class="btn btn-secondary">Book Level 2</a>
+                        <!-- FIXED: Added onclick for call tracking -->
+                        <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 2</a>
                     </div>
                     <div class="pricing-card">
                         <h4 class="pricing-level">Level 3 Detail</h4>
@@ -343,7 +365,8 @@
                             <li>Free micrfiber cloth</li>
                             <li>Protection plan (complimentary maintenance clean within 15 days)</li>
                         </ul>
-                         <a href="tel:+14052955189" class="btn btn-secondary">Book Level 3</a>
+                         <!-- FIXED: Added onclick for call tracking -->
+                         <a href="tel:+14052955189" onclick="return gtag_report_conversion('tel:+14052955189');" class="btn btn-secondary">Book Level 3</a>
                     </div>
                 </div>
             </div>
@@ -362,7 +385,7 @@
                     <img src="https://michieauto.com/Screenshot_20250702_135648_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
                     <img src="https://michieauto.com/Screenshot_20250702_135557_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
                     <img src="https://michieauto.com/Screenshot_20250702_135707_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
-                    <img src="https://michieauto.com/Screenshot_20250702_135717_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
+                    <img src="https.michieauto.com/Screenshot_20250702_135717_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
                     <img src="https://michieauto.com/Screenshot_20250702_135728_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
                     <img src="https://michieauto.com/Screenshot_20250702_135753_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
                     <img src="https://michieauto.com/Screenshot_20250702_135814_Maps.jpg" alt="Customer review screenshot" class="w-full h-auto rounded-lg shadow-md" onerror="this.style.display='none'">
@@ -380,6 +403,7 @@
             Book Your Appointment Today!
         </p>
         <div class="w-full sm:w-auto flex justify-center sm:justify-end">
+            <!-- This button's tracking is handled by the gtag config since the number is displayed -->
             <a href="tel:+14052955189" class="btn-call-to-action">
                 <svg class="w-6 h-6 mr-3" fill="currentColor" viewBox="0 0 20 20"><path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path></svg>
                 Call Now: (405) 295-5189
